Home Page Integrated

--- a/adminpanel/bower.json
+++ b/adminpanel/bower.json
@@ -41,7 +41,8 @@
     "flot.tooltip": "~0.8.4",
     "jquery-ui": "*",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "jquery-colorbox": "^1.6.4"
+    "jquery-colorbox": "^1.6.4",
+    "tether": "^1.4.0"
   },
   "resolutions": {
     "font-awesome": "~4.6.3"
